--- a/Image Gallery/Base.lproj/Main.storyboard
+++ b/Image Gallery/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
             <objects>
                 <collectionViewController id="ENH-QG-xlx" customClass="ImageGalleryViewController" customModule="Image_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="FiH-6R-nyF">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="20s-CH-HqT">
@@ -25,7 +25,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" id="4h1-2F-TvM">
-                            <rect key="frame" x="0.0" y="-64" width="1112" height="834"/>
+                            <rect key="frame" x="0.0" y="-64" width="791.5" height="834"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </activityIndicatorView>
@@ -98,7 +98,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" id="ijx-uH-Vpi">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qRe-Cd-4oy">
-                                <rect key="frame" x="1047" y="5" width="45" height="34"/>
+                                <rect key="frame" x="726.5" y="5" width="45" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Trash">
@@ -121,18 +121,18 @@
             <objects>
                 <viewController id="xch-L2-5AS" customClass="ImageViewController" customModule="Image_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kqy-e2-GKY">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mxz-SN-wwm">
-                                <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                                <rect key="frame" x="0.0" y="0.0" width="791.5" height="834"/>
                             </scrollView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="HAY-8y-v6f">
-                                <rect key="frame" x="537.5" y="430.5" width="37" height="37"/>
+                                <rect key="frame" x="377.5" y="430.5" width="37" height="37"/>
                                 <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☹️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w31-nb-vnn">
-                                <rect key="frame" x="529" y="419" width="54" height="60"/>
+                                <rect key="frame" x="369" y="419" width="54" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -164,10 +164,10 @@
         <!--Navigation Controller-->
         <scene sceneID="C0Z-iS-H2Q">
             <objects>
-                <navigationController storyboardIdentifier="Document" automaticallyAdjustsScrollViewInsets="NO" id="OqL-ba-eD6" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OqL-ba-eD6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="roJ-Au-nKd">
-                        <rect key="frame" x="0.0" y="20" width="1112" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="791.5" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -179,7 +179,7 @@
             </objects>
             <point key="canvasLocation" x="-568" y="48"/>
         </scene>
-        <!--Galleries-->
+        <!--Local Galleries-->
         <scene sceneID="tWZ-u1-Dzh">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="7k4-Gq-08z" customClass="GalleryTableViewController" customModule="Image_Gallery" customModuleProvider="target" sceneMemberID="viewController">
@@ -214,6 +214,7 @@
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="title" destination="DR7-OA-Ee7" id="18E-Mc-quq"/>
+                                    <segue destination="OqL-ba-eD6" kind="showDetail" identifier="Select Gallery" id="tLX-Bs-LSL"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -222,7 +223,7 @@
                             <outlet property="delegate" destination="7k4-Gq-08z" id="lp3-i1-Zo9"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Galleries" id="dUq-mn-SSW">
+                    <navigationItem key="navigationItem" title="Local Galleries" id="dUq-mn-SSW">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="eqo-Wq-UTO">
                             <connections>
                                 <action selector="addGallery" destination="7k4-Gq-08z" id="IHR-fw-8K3"/>
@@ -253,9 +254,10 @@
         <!--Split View Controller-->
         <scene sceneID="vJf-t1-hEC">
             <objects>
-                <splitViewController id="cFV-vo-dvP" sceneMemberID="viewController">
+                <splitViewController storyboardIdentifier="Document" id="cFV-vo-dvP" sceneMemberID="viewController">
                     <connections>
                         <segue destination="A7J-Xt-DAB" kind="relationship" relationship="masterViewController" id="d9i-Cq-NG1"/>
+                        <segue destination="OqL-ba-eD6" kind="relationship" relationship="detailViewController" id="WIv-RA-2WC"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uF3-1O-ie9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -265,7 +267,7 @@
         <!--Document Browser View Controller-->
         <scene sceneID="aZn-QK-BFC">
             <objects>
-                <viewController id="MnD-ei-DiU" customClass="DocumentBrowserViewController" customModule="Documents" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="MnD-ei-DiU" customClass="DocumentBrowserViewController" customModule="Image_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fvS-gJ-hb5">
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -275,7 +277,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbd-ZO-2kX" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1297" y="375"/>
+            <point key="canvasLocation" x="-2016" y="-281"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="tLX-Bs-LSL"/>
+    </inferredMetricsTieBreakers>
 </document>
